functioning main and config

--- a/bin/nextflow.config
+++ b/bin/nextflow.config
@@ -1,3 +1,7 @@
 params {
     INPUT = '/public/groups/kimlab/dwarriaz/overwriTE/docs/whole_genome_overwriTE.tsv'
 }
+executor {
+    name = 'local'
+    queueSize = 4
+}
